<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".WelcomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        android:textStyle="bold"
        android:text="@string/welcome_text" />

    <Button
        android:id="@+id/welcome_register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/welcome_register_button_text"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryDark">

    </Button>

    <Button
        android:id="@+id/welcome_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/welcome_login_button_text"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryDark">

    </Button>

</LinearLayout>